[package]
name = "tartaros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.7"
colored = "2.0.0"
comfy-table = "5.0.0"
url = "2.2.2"
which = "4.2.4"
addr = "0.15.3"
xml-rs = "0.8.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"